[package]
name = "database"
version = "0.1.0"
authors = ["linusb"]
edition = "2018"

[dependencies]
logger = { path = "../logger" }
hyper = "^0.10"
hyper-rustls = "0.6.2"
chrono = "^0.4.6"
lazy_static = "^1"
yup-oauth2 = "^1"
actix-web = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_derive = "^1"
futures = "^0.1"

[dependencies.google_firestore]
version = "^0.1"
git = "https://github.com/mankinskin/google_firestore.git"
branch = "master"
